--- a/src/Stylesheet.css
+++ b/src/Stylesheet.css
@@ -4,12 +4,61 @@
   box-sizing: border-box;
 }
 
-body {
-  position: absolute;
+.App {
+  max-height: 700px;
+  max-width: 700px;
   display: flex;
-  text-align: center;
+  flex-direction: column;
   justify-content: center;
-  left: 40%;
-  height: 50%;
+  justify-items: center;
+  /* border: 2px solid black; */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid black;
+  justify-content: flex-start;
+  height: 300px;
+  overflow: scroll;
+  position: relative;
+}
+
+.FirstContainer {
+  border: 2px solid black;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  /* border: 2px solid black; */
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.inputStyle {
+  width: 300px !important;
+}
+
+.passwordInput {
+  max-width: 300px;
+}
+.dialog {
+  width: 300px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.removeItem {
+  width: 80px;
   border: 2px solid black;
 }
